<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="conditioner">"Odżywka</string>
    <string name="shampoo">Szampon</string>
    <string name="oil">Olej</string>
    <string name="emulsifier">Emulgator</string>
    <string name="stylizer">Stylizator</string>
    <string name="other">Inne</string>
    <string name="save">Zapisz</string>
    <string name="close">Zamknij</string>
    <string name="confirm">Potwierdź</string>
    <string name="cancel">Anuluj</string>
    <string name="product_type">Rodzaj produktu</string>
    <string name="omo">OMO</string>
    <string name="cg">CG</string>
    <string name="sort">Sortuj</string>
    <string name="humectants">Humektanty</string>
    <string name="emollients">Emolienty</string>
    <string name="proteins">Proteiny</string>
    <string name="mild_shampoo">Łagodny szampon</string>
    <string name="medium_shampoo">Średni szampon</string>
    <string name="strong_shampoo">Mocny szampon</string>
    <string name="cream">Krem</string>
    <string name="mask">Maska</string>
    <string name="leave_in_conditioner">Odżywka b/s</string>
    <string name="foam">Pianka</string>
    <string name="serum">Serum</string>
    <string name="gel">Żel</string>
    <string name="letter_h">H</string>
    <string name="letter_e">E</string>
    <string name="letter_p">P</string>
    <string name="proportion_of_ingredients">Proporcje składników</string>
    <string name="without_schema">Bez schematu</string>

</resources>