<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="32dp"
    app:cardBackgroundColor="@color/color_background_darker"
    app:cardElevation="0dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/proportion_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/proteins"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_proteins"
                android:gravity="center"
                android:text="@string/letter_p"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/color_white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emollients"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_emollients"
                android:gravity="center"
                android:text="@string/letter_e"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/color_white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/humectants"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_humectants"
                android:gravity="center"
                android:text="@string/letter_h"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/color_white"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proportion_of_ingredients"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:textColor="@color/text_color_tertiary"
            app:layout_constraintBottom_toBottomOf="@id/proportion_bar"
            app:layout_constraintEnd_toEndOf="@id/proportion_bar"
            app:layout_constraintStart_toStartOf="@id/proportion_bar"
            app:layout_constraintTop_toTopOf="@id/proportion_bar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>