<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp">

    <com.example.product_details.views.SectionHeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:sectionIcon="@drawable/ic_round_category_24"
        app:sectionTitle="@string/composition_of_ingredients" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/ingredients_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/proteins_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proteins"
            app:chipBackgroundColor="@color/chip_protein_bg"
            app:chipStrokeColor="@color/color_proteins" />

        <com.google.android.material.chip.Chip
            android:id="@+id/emollients_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emollients"
            app:chipBackgroundColor="@color/chip_emollient_bg"
            app:chipStrokeColor="@color/color_emollients" />

        <com.google.android.material.chip.Chip
            android:id="@+id/humectants_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humectants"
            app:chipBackgroundColor="@color/chip_humectant_bg"
            app:chipStrokeColor="@color/color_humectants" />
    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>